# ANN

./: Duan_1K_Results.md  HN_1K_Results.md  README.md  Test_Duan_10K_with_dlayer_stats.csv  Test_Duan_1K_with_dlayer_stats.csv  Test_Duan_1K_with_out_dlayer_stats.csv  Test_GJR_1K_with_dlayer_stats.csv  Test_GJR_1K_with_out_dlayer_stats.csv  Test_HN_1K_with_dlayer_stats.csv  Test_HN_1K_with_out_dlayer_stats.csv  Train_Duan_10K_with_dlayer_stats.csv  Train_Duan_1K_with_dlayer_stats.csv  Train_Duan_1K_with_out_dlayer_stats.csv  Train_GJR_1K_with_dlayer_stats.csv  Train_GJR_1K_with_out_dlayer_stats.csv  Train_HN_1K_with_dlayer_stats.csv  Train_HN_1K_with_out_dlayer_stats.csv  ann.py  main.py  pyproject.toml
datasets/: Duan_10K.csv  Duan_1K.csv  GJR_1K.csv  varying_garch_parallel_1000.csv  varying_garch_parallel_10000.csv
